# econ-conf

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
data/conferences/3cmfi2026/: data.json  fix_to_v2.py  scrape_3cmfi_v2.py  scrape_3cmfi_v3.py  scrape_3cmfi_v4.py
data/conferences/ac-mfr/: data.json  scrape_acmfr.py
data/conferences/aea2026/: data.json  parse_pdf.py  parse_pdf_v2.py  parse_pdf_v3.py  parse_pdf_v4.py  parse_pdf_v5.py  scrape_aea.py
data/conferences/afa2026/: analyze_program.py  data.json  scrape_afa_program.py
data/conferences/affi2026/: data.json  parser_affi.py
data/conferences/afse2026/: data.json
data/conferences/bdpcepr2026/: data.json  scrape_bdpcepr.py
data/conferences/bfsr2026/: data.json  scrape_bfsr.py
data/conferences/bwbfi2026/: clean_bwbfi.py  data.json
data/conferences/cea2026/: data.json
econ_conf/: __init__.py  config.py
econ_conf/normalize/: abbreviations.py  canonical_map.py  institutions.py
econ_conf/pipeline/: generate_newsletter.py  master.py  master_pipeline.py  newsletter.py  working_papers_scraper.py
econ_conf/scrapers/: conftool_scraper.py
econ_conf/utils/: drive.py  paths.py  schema.py  sync_supabase.py
scripts/: _check_sheet.py  add_five_conferences.py  build_5confs_v2.py  build_all_conferences_csv.py  build_all_conferences_json.py  create_v2_all.py  create_v2_data.py  eea_tsv_parser.py  fetch_conference_program.py  final_build.py  normalize_afse.py  normalize_institutions.py  rebuild_and_upload.py  run_pipeline_updates.py  sciencesconf_scraper.py  scrape_all_v2.py  upload_bwbfi_irmc.py
(+61 files in other folders)
